backup/mb-damien.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "7"
    creationTimestamp: "2026-01-08T04:12:16Z"
    generation: 7
    labels:
      app: mechanicbuddy-api
      tenant-id: damien
      tier: team
    name: api-damien
    namespace: mb-damien
    resourceVersion: "489867"
    uid: 8e0ba642-9049-4dbf-819b-c5882aaefa60
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mechanicbuddy-api
        tenant-id: damien
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-08T05:41:19.5910062Z"
        creationTimestamp: null
        labels:
          app: mechanicbuddy-api
          tenant-id: damien
          tier: team
      spec:
        containers:
        - env:
          - name: TENANT_ID
            value: damien
          - name: ASPNETCORE_ENVIRONMENT
            value: Production
          - name: TENANT_TIER
            value: team
          image: ghcr.io/d4m13n-d3v/mechanicbuddy-api:latest
          imagePullPolicy: Always
          name: api
          ports:
          - containerPort: 15567
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/appsettings.Secrets.json
            name: secrets-volume
            readOnly: true
            subPath: appsettings.Secrets.json
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ghcr-credentials
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: secrets-volume
          secret:
            defaultMode: 420
            secretName: api-secrets-damien
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-08T04:12:26Z"
      lastUpdateTime: "2026-01-08T04:12:26Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-08T04:12:16Z"
      lastUpdateTime: "2026-01-08T05:41:22Z"
      message: ReplicaSet "api-damien-947947cf5" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 7
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "5"
    creationTimestamp: "2026-01-08T04:12:16Z"
    generation: 5
    labels:
      app: mechanicbuddy-frontend
      tenant-id: damien
      tier: free
    name: frontend-damien
    namespace: mb-damien
    resourceVersion: "491193"
    uid: 86d9627c-9b44-46da-a8bd-94b9fb91b12c
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mechanicbuddy-frontend
        tenant-id: damien
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-08T00:47:15-05:00"
        creationTimestamp: null
        labels:
          app: mechanicbuddy-frontend
          tenant-id: damien
      spec:
        containers:
        - env:
          - name: TENANT_ID
            value: damien
          - name: NODE_ENV
            value: production
          envFrom:
          - secretRef:
              name: frontend-secrets-damien
          image: ghcr.io/d4m13n-d3v/mechanicbuddy-web:latest
          imagePullPolicy: Always
          name: frontend
          ports:
          - containerPort: 3000
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ghcr-credentials
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-08T04:13:03Z"
      lastUpdateTime: "2026-01-08T04:13:03Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-08T04:12:16Z"
      lastUpdateTime: "2026-01-08T05:48:05Z"
      message: ReplicaSet "frontend-damien-5f5d895665" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 5
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-01-08T04:12:16Z"
    labels:
      app: mechanicbuddy-api
      tenant-id: damien
    name: api-damien
    namespace: mb-damien
    resourceVersion: "471544"
    uid: 33b89f25-8ca2-40fe-b48e-b3f7495ec3a4
  spec:
    clusterIP: 10.106.188.118
    clusterIPs:
    - 10.106.188.118
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 15567
    selector:
      app: mechanicbuddy-api
      tenant-id: damien
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-01-08T04:12:16Z"
    labels:
      app: mechanicbuddy-frontend
      tenant-id: damien
    name: frontend-damien
    namespace: mb-damien
    resourceVersion: "471548"
    uid: db42e742-1070-476d-8f22-4a253c195a68
  spec:
    clusterIP: 10.99.184.37
    clusterIPs:
    - 10.99.184.37
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: mechanicbuddy-frontend
      tenant-id: damien
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  data:
    ca.crt: |
      -----BEGIN CERTIFICATE-----
      MIIDBTCCAe2gAwIBAgIIA9iD9L9x67owDQYJKoZIhvcNAQELBQAwFTETMBEGA1UE
[...]
      ZrVs+rkCBYxe
      -----END CERTIFICATE-----
  kind: ConfigMap
  metadata:
    annotations:
      kubernetes.io/description: Contains a CA bundle that can be used to verify the
        kube-apiserver when using internal endpoints such as the internal service
        IP or kubernetes.default.svc. No other usage is guaranteed across distributions
        of Kubernetes clusters.
    creationTimestamp: "2026-01-08T04:12:15Z"
    name: kube-root-ca.crt
    namespace: mb-damien
    resourceVersion: "471508"
    uid: 8d09cb52-3f76-4de7-a93f-9fe41d34bbb6
- apiVersion: v1
  data:
    appsettings.Secrets.json: ewogICJQZGZEaXJlY3RvcnkiOiAiL3Zhci9tZWNoYW5pY2J1ZGR5L3BkZiIsCiAgIlB1cHBldGVlclBhdGgiOiAiL29wdC9wdXBwZXRlZXIiLAogICJKd3RPcHRpb25zIjogewogICAgIlNlY3JldCI6ICJQcm9kdWN0aW9uSnd0U2VjcmV0S2V5TWluaW11bTMyQ2hhcmFjdGVycyEiLAogICAgIkNvbnN1bWVyU2VjcmV0IjogIlByb2R1Y3Rpb25Kd3RTZWNyZXRLZXlNaW5pbXVtMzJDaGFyYWN0ZXJzISIKICB9LAogICJEYk9wdGlvbnMiOiB7CiAgICAiSG9zdCI6ICJtZWNoYW5pY2J1ZGR5LW1hbmFnZW1lbnQtZGItcncubWVjaGFuaWNidWRkeS1zeXN0ZW0uc3ZjLmNsdXN0ZXIubG9jYWwiLAogICAgIlBvcnQiOiA1NDMyLA [...]
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-08T04:12:15Z"
    labels:
      app: mechanicbuddy-api
      tenant-id: damien
    name: api-secrets-damien
    namespace: mb-damien
    resourceVersion: "471510"
    uid: 3ca2075e-b680-4517-8fd9-738ffc01f187
  type: Opaque
- apiVersion: v1
  data:
    API_URL: aHR0cDovL2FwaS1kYW1pZW46ODA=
    NEXT_PUBLIC_API_URL: aHR0cHM6Ly9kYW1pZW4ubWVjaGFuaWNidWRkeS5hcHAvYXBp
    NEXT_PUBLIC_SESSION_TIMEOUT: MzYwMA==
    SERVER_SECRET: UHJvZHVjdGlvbkp3dFNlY3JldEtleU1pbmltdW0zMkNoYXJhY3RlcnMh
    SESSION_SECRET: cVUyUUxVb1IvMHVZL1RDMEVzOFgveTlMVVdMRXc5eEluamJ2OTJtaHplRT0=
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-08T04:12:15Z"
    labels:
      app: mechanicbuddy-frontend
      tenant-id: damien
    name: frontend-secrets-damien
    namespace: mb-damien
    resourceVersion: "471511"
    uid: e0f4a836-9855-4faa-9d15-bda8a96f361b
  type: Opaque
- apiVersion: v1
  data:
    .dockerconfigjson: eyJhdXRocyI6eyJnaGNyLmlvIjp7InVzZXJuYW1lIjoiZDRtMTNuLWQzdiIsInBhc3N3b3JkIjoiZ2hwXzh4SzJjSVBmY3BCR0xETm9JcDNYT1pVZ0hPRnFhSDJURVNFNiIsImVtYWlsIjoiZGFtaWVub3N0bGVyMUBvdXRsb29rLmNvbSIsImF1dGgiOiJaRFJ0TVROdUxXUXpkanBuYUhCZk9IaExNbU5KVUdaamNFSkhURVJPYjBsd00xaFBXbFZuU0U5R2NXRklNbFJGVTBVMiJ9fX0=
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-08T04:12:15Z"
    labels:
      app: mechanicbuddy
      copied-from-namespace: mechanicbuddy-system
      copied-from-secret: ghcr-credentials
    name: ghcr-credentials
    namespace: mb-damien
    resourceVersion: "471509"
    uid: 5965bb21-736e-40a7-b6ac-7037d689dacd
  type: kubernetes.io/dockerconfigjson
- apiVersion: v1
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZIRENDQkFTZ0F3SUJBZ0lTQlFueFVuSkdoeDZmMTJIT0xlSmZBdG83TUEwR0NTcUdTSWIzRFFFQkN3VUEKTURNeEN6QUpCZ05WQkFZVEFsVlRNUll3RkFZRFZRUUtFdzFNWlhRbmN5QkZibU55ZVhCME1Rd3dDZ1lEVlFRRApFd05TTVRNd0hoY05Nall3TVRBMk1qQXpNakUwV2hjTk1qWXdOREEyTWpBek1qRXpXakFjTVJvd0dBWURWUVFECkV4RnRaV05vWVc1cFkySjFaR1I1TG1Gd2NEQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0MKZ2dFQkFNZm5hZXArUTdDWGRWcTZwdExNVnIxWWFUUDF0d0dmTGcwakhFdnBPdEVaYVVxQ3NxYXFQWXV5TFdMNwpKWkdaQ25EcE91N1F [...]
    tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBeCtkcDZuNURzSmQxV3JxbTBzeFd2VmhwTS9XM0FaOHVEU01jUytrNjBSbHBTb0t5CnBxbzlpN0l0WXZzbGtaa0tjT2s2N3RDdmNPRlE1ek1STzdEUktGTkhmbEtPY0h4dlorajNHZGRtdnZWWDVFdUEKV2VhZ1A5c1FhckZqa1B2VHpGcWJ4SjBxOHpVbFVSOWQwZndrU1lJbXpUcUcxaXBFdld3QVlabmdMMkpOZm1RUApFVWdUNk01clBwNlA5d0h2YTdyOTdXRVVjaUJiSnhQWDdCeDYvRDBzOWlIUnNTN2ZvTitCRHB2VkU4NURoUWI2CnhCNVNqbkp1Sjl2UTNtRWFUanZWYm1aN25Oa2RDMW03ckRLWCsySSsvakp5MnUzZU93RjQ0NCtwZ3RPanZuMmoKTDEyanlnWHI [...]
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-08T04:12:16Z"
    labels:
      app: mechanicbuddy
      copied-from: wildcard-mechanicbuddy-app-tls
    name: tls-wildcard-mechanicbuddy-app
    namespace: mb-damien
    resourceVersion: "471551"
    uid: 991df996-af1a-493d-8939-04d64d56894d
  type: kubernetes.io/tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/use-regex: "true"
    creationTimestamp: "2026-01-08T04:12:16Z"
    generation: 1
    labels:
      app: mechanicbuddy
      tenant-id: damien
    name: ingress-damien
    namespace: mb-damien
    resourceVersion: "471678"
    uid: 8cc14951-acee-4a61-86ea-b06d8a24aaa3
  spec:
    ingressClassName: nginx
    rules:
    - host: damien.mechanicbuddy.app
      http:
        paths:
        - backend:
            service:
              name: api-damien
              port:
                number: 80
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: frontend-damien
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - damien.mechanicbuddy.app
      secretName: tls-wildcard-mechanicbuddy-app
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.14.182
kind: List
metadata:
  resourceVersion: ""
