backup/mb-demo.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "17"
    creationTimestamp: "2026-01-07T19:54:11Z"
    generation: 17
    labels:
      app: mechanicbuddy-api
      tenant-id: demo
      tier: free
    name: api-demo
    namespace: mb-demo
    resourceVersion: "487830"
    uid: b51253bb-35f1-4636-addf-8ce6f414cafc
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mechanicbuddy-api
        tenant-id: demo
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-08T00:31:10-05:00"
        creationTimestamp: null
        labels:
          app: mechanicbuddy-api
          tenant-id: demo
      spec:
        containers:
        - env:
          - name: TENANT_ID
            value: demo
          - name: ASPNETCORE_ENVIRONMENT
            value: Production
          image: ghcr.io/d4m13n-d3v/mechanicbuddy-api:latest
          imagePullPolicy: Always
          name: api
          ports:
          - containerPort: 15567
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app/appsettings.Secrets.json
            name: secrets-volume
            readOnly: true
            subPath: appsettings.Secrets.json
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ghcr-credentials
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: secrets-volume
          secret:
            defaultMode: 420
            secretName: api-secrets-demo
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-07T19:54:23Z"
      lastUpdateTime: "2026-01-07T19:54:23Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-07T19:54:11Z"
      lastUpdateTime: "2026-01-08T05:31:29Z"
      message: ReplicaSet "api-demo-dbd5778b4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 17
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "18"
    creationTimestamp: "2026-01-07T19:54:11Z"
    generation: 18
    labels:
      app: mechanicbuddy-frontend
      tenant-id: demo
      tier: free
    name: frontend-demo
    namespace: mb-demo
    resourceVersion: "488322"
    uid: 096398aa-a0cf-4fe9-a38a-d9195336014c
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mechanicbuddy-frontend
        tenant-id: demo
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-08T00:31:10-05:00"
        creationTimestamp: null
        labels:
          app: mechanicbuddy-frontend
          tenant-id: demo
      spec:
        containers:
        - env:
          - name: TENANT_ID
            value: demo
          - name: NODE_ENV
            value: production
          envFrom:
          - secretRef:
              name: frontend-secrets-demo
          image: ghcr.io/d4m13n-d3v/mechanicbuddy-web:latest
          imagePullPolicy: Always
          name: frontend
          ports:
          - containerPort: 3000
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: ghcr-credentials
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-07T23:39:46Z"
      lastUpdateTime: "2026-01-07T23:39:46Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-07T19:54:11Z"
      lastUpdateTime: "2026-01-08T05:33:12Z"
      message: ReplicaSet "frontend-demo-687759cc68" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 18
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-01-07T19:54:11Z"
    labels:
      app: mechanicbuddy-api
      tenant-id: demo
    name: api-demo
    namespace: mb-demo
    resourceVersion: "383366"
    uid: 7a555b86-55bd-4847-99e5-48ed335edb27
  spec:
    clusterIP: 10.97.176.238
    clusterIPs:
    - 10.97.176.238
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 15567
    selector:
      app: mechanicbuddy-api
      tenant-id: demo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-01-07T19:54:11Z"
    labels:
      app: mechanicbuddy-frontend
      tenant-id: demo
    name: frontend-demo
    namespace: mb-demo
    resourceVersion: "383370"
    uid: d8698007-32e2-4306-8236-7b33fbca83cf
  spec:
    clusterIP: 10.97.72.231
    clusterIPs:
    - 10.97.72.231
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: mechanicbuddy-frontend
      tenant-id: demo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  data:
    ca.crt: |
      -----BEGIN CERTIFICATE-----
      MIIDBTCCAe2gAwIBAgIIA9iD9L9x67owDQYJKoZIhvcNAQELBQAwFTETMBEGA1UE
[...]
      ZrVs+rkCBYxe
      -----END CERTIFICATE-----
  kind: ConfigMap
  metadata:
    annotations:
      kubernetes.io/description: Contains a CA bundle that can be used to verify the
        kube-apiserver when using internal endpoints such as the internal service
        IP or kubernetes.default.svc. No other usage is guaranteed across distributions
        of Kubernetes clusters.
    creationTimestamp: "2026-01-07T19:54:11Z"
    name: kube-root-ca.crt
    namespace: mb-demo
    resourceVersion: "383333"
    uid: 324f0304-0e89-4177-a41f-7db9aaed0e88
- apiVersion: v1
  data:
    appsettings.Secrets.json: ewogICJQZGZEaXJlY3RvcnkiOiAiL3Zhci9tZWNoYW5pY2J1ZGR5L3BkZiIsCiAgIlB1cHBldGVlclBhdGgiOiAiL29wdC9wdXBwZXRlZXIiLAogICJKd3RPcHRpb25zIjogewogICAgIlNlY3JldCI6ICJQcm9kdWN0aW9uSnd0U2VjcmV0S2V5TWluaW11bTMyQ2hhcmFjdGVycyEiLAogICAgIkNvbnN1bWVyU2VjcmV0IjogIlByb2R1Y3Rpb25Kd3RTZWNyZXRLZXlNaW5pbXVtMzJDaGFyYWN0ZXJzISIKICB9LAogICJEYk9wdGlvbnMiOiB7CiAgICAiSG9zdCI6ICJtZWNoYW5pY2J1ZGR5LW1hbmFnZW1lbnQtZGItcncubWVjaGFuaWNidWRkeS1zeXN0ZW0uc3ZjLmNsdXN0ZXIubG9jYWwiLAogICAgIlBvcnQiOiA1NDMyLA [...]
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-07T19:54:11Z"
    labels:
      app: mechanicbuddy-api
      tenant-id: demo
    name: api-secrets-demo
    namespace: mb-demo
    resourceVersion: "388971"
    uid: eebc5c5e-83cf-4916-986e-bd697110855e
  type: Opaque
- apiVersion: v1
  data:
    API_URL: aHR0cDovL2FwaS1kZW1vOjgw
    NEXT_PUBLIC_API_URL: aHR0cHM6Ly9kZW1vLm1lY2hhbmljYnVkZHkuYXBwL2FwaQ==
    NEXT_PUBLIC_SESSION_TIMEOUT: MzYwMA==
    SERVER_SECRET: UHJvZHVjdGlvbkp3dFNlY3JldEtleU1pbmltdW0zMkNoYXJhY3RlcnMh
    SESSION_SECRET: NzJFcC9SMEhYRW1sekVOeXNDNzlQKy8vblhlaktwUk5tMExFVms3RnI5OD0=
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-07T19:54:11Z"
    labels:
      app: mechanicbuddy-frontend
      tenant-id: demo
    name: frontend-secrets-demo
    namespace: mb-demo
    resourceVersion: "383337"
    uid: 2067351c-3d79-4dce-a0cd-7870f8ac5725
  type: Opaque
- apiVersion: v1
  data:
    .dockerconfigjson: eyJhdXRocyI6eyJnaGNyLmlvIjp7InVzZXJuYW1lIjoiZDRtMTNuLWQzdiIsInBhc3N3b3JkIjoiZ2hwXzh4SzJjSVBmY3BCR0xETm9JcDNYT1pVZ0hPRnFhSDJURVNFNiIsImVtYWlsIjoiZGFtaWVub3N0bGVyMUBvdXRsb29rLmNvbSIsImF1dGgiOiJaRFJ0TVROdUxXUXpkanBuYUhCZk9IaExNbU5KVUdaamNFSkhURVJPYjBsd00xaFBXbFZuU0U5R2NXRklNbFJGVTBVMiJ9fX0=
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-07T19:54:11Z"
    labels:
      app: mechanicbuddy
      copied-from-namespace: mechanicbuddy-system
      copied-from-secret: ghcr-credentials
    name: ghcr-credentials
    namespace: mb-demo
    resourceVersion: "383335"
    uid: a1fdb203-c9d6-42d9-b3d0-c21e14ee8b23
  type: kubernetes.io/dockerconfigjson
- apiVersion: v1
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZIRENDQkFTZ0F3SUJBZ0lTQlFueFVuSkdoeDZmMTJIT0xlSmZBdG83TUEwR0NTcUdTSWIzRFFFQkN3VUEKTURNeEN6QUpCZ05WQkFZVEFsVlRNUll3RkFZRFZRUUtFdzFNWlhRbmN5QkZibU55ZVhCME1Rd3dDZ1lEVlFRRApFd05TTVRNd0hoY05Nall3TVRBMk1qQXpNakUwV2hjTk1qWXdOREEyTWpBek1qRXpXakFjTVJvd0dBWURWUVFECkV4RnRaV05vWVc1cFkySjFaR1I1TG1Gd2NEQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0MKZ2dFQkFNZm5hZXArUTdDWGRWcTZwdExNVnIxWWFUUDF0d0dmTGcwakhFdnBPdEVaYVVxQ3NxYXFQWXV5TFdMNwpKWkdaQ25EcE91N1F [...]
    tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBeCtkcDZuNURzSmQxV3JxbTBzeFd2VmhwTS9XM0FaOHVEU01jUytrNjBSbHBTb0t5CnBxbzlpN0l0WXZzbGtaa0tjT2s2N3RDdmNPRlE1ek1STzdEUktGTkhmbEtPY0h4dlorajNHZGRtdnZWWDVFdUEKV2VhZ1A5c1FhckZqa1B2VHpGcWJ4SjBxOHpVbFVSOWQwZndrU1lJbXpUcUcxaXBFdld3QVlabmdMMkpOZm1RUApFVWdUNk01clBwNlA5d0h2YTdyOTdXRVVjaUJiSnhQWDdCeDYvRDBzOWlIUnNTN2ZvTitCRHB2VkU4NURoUWI2CnhCNVNqbkp1Sjl2UTNtRWFUanZWYm1aN25Oa2RDMW03ckRLWCsySSsvakp5MnUzZU93RjQ0NCtwZ3RPanZuMmoKTDEyanlnWHI [...]
  kind: Secret
  metadata:
    creationTimestamp: "2026-01-07T19:54:12Z"
    labels:
      app: mechanicbuddy
      copied-from: wildcard-mechanicbuddy-app-tls
    name: tls-wildcard-mechanicbuddy-app
    namespace: mb-demo
    resourceVersion: "383373"
    uid: cc70f3a9-7765-4352-ae1f-027f68c35f09
  type: kubernetes.io/tls
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
      nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/use-regex: "true"
    creationTimestamp: "2026-01-07T19:54:12Z"
    generation: 1
    labels:
      app: mechanicbuddy
      tenant-id: demo
    name: ingress-demo
    namespace: mb-demo
    resourceVersion: "383515"
    uid: f4c97af0-8d25-4ff3-a290-e6cb629084ea
  spec:
    ingressClassName: nginx
    rules:
    - host: demo.mechanicbuddy.app
      http:
        paths:
        - backend:
            service:
              name: api-demo
              port:
                number: 80
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: frontend-demo
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - demo.mechanicbuddy.app
      secretName: tls-wildcard-mechanicbuddy-app
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.14.182
kind: List
metadata:
  resourceVersion: ""
